--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "C_Cpp.default.compilerPath": "c:\\cmoc-win64\\cmoc.exe"
+    "C_Cpp.default.compilerPath": "c:\\cmoc-win64\\cmoc.exe",
+    "C_Cpp.errorSquiggles": "disabled"
 }
